# MeTube-Upgraded-Clients

./: .gitignore  README.md  RELEASE_NOTES.md  docker-compose.yml
metube-desktop/: BUILDING.md  CMakeLists.txt  DEV_NOTES.md  HANDOFF.md  README.md  d3d12.def
metube-desktop/Tools/MinGW/: info.txt  versions.txt
metube-desktop/Tools/MinGW/etc/: gdbinit
metube-desktop/Tools/MinGW/i686-w64-mingw32/include/: _mingw.h
metube-desktop/Tools/MinGW/opt/lib/pkgconfig/: python2.pc
metube-desktop/Tools/MinGW/opt/lib/python2.7/: BaseHTTPServer.pyo  (+115 more)
metube-desktop/Tools/mingw48_32/: info.txt  versions.txt
metube-desktop/Tools/mingw48_32/etc/: gdbinit
metube-desktop/Tools/mingw491_32/: build-info.txt
metube-desktop/src/: main.cpp
metube-desktop/src/core/: AppSettings.cpp  AppSettings.h  DownloadManager.cpp  DownloadManager.h  Models.h
metube-desktop/src/services/: ClipboardMonitor.cpp  ClipboardMonitor.h  MetubeRestService.cpp  MetubeRestService.h  MetubeSocketService.cpp  MetubeSocketService.h  NativeNotificationService.cpp  NativeNotificationService.h  RequestBuilder.cpp  RequestBuilder.h  SystemTrayManager.cpp  SystemTrayManager.h
metube-desktop/src/ui/: AddDownloadDialog.cpp  AddDownloadDialog.h  MainWindow.cpp  MainWindow.h
metube-desktop/src/ui/screens/: HistoryScreen.cpp  HistoryScreen.h  HomeScreen.cpp  HomeScreen.h  QueueScreen.cpp  QueueScreen.h  SettingsScreen.cpp  SettingsScreen.h  SubscriptionsScreen.cpp  SubscriptionsScreen.h
metube-desktop/src/ui/widgets/: DownloadItemWidget.cpp  DownloadItemWidget.h  DownloadListWidget.cpp  DownloadListWidget.h
metube-desktop/src/utils/: JsonUtils.cpp  JsonUtils.h
metube-desktop/src/viewmodels/: DownloadViewModel.cpp  DownloadViewModel.h
(+2238 files in other folders)
